--- a/app/src/main/assets/demo001.html
+++ b/app/src/main/assets/demo001.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>自定义主页</title>
     <link rel="stylesheet" href="beginPageCss1.css" type="text/css">
-    <meta name="viewport" content="width=device-width,initial-scale=0.7">
+    <meta name="viewport" content="width=device-width,initial-scale=0.7"  user-scalable=no>
     <script>
 
         function testClick(){
@@ -18,7 +18,11 @@
                 }
             );
         }
+
+
+
     </script>
+
 </head>
 
 <body>
@@ -73,13 +77,13 @@
                     </div>
                 </a>
                 <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="" alt="图">
+                    <img src="./google.png" alt="图">
                     <div>
                         <p>bilibili</p>
                     </div>
                 </a>
                 <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="" alt="图">
+                    <img src="./google.png" alt="图">
                     <div>
                         <p>bilibili</p>
                     </div>
