mainpage,blockpage,视频播放

--- a/app/src/main/assets/mainPage.html
+++ b/app/src/main/assets/mainPage.html
@@ -41,53 +41,53 @@
             </div>
             <div class="iconBackBoxAll">
                 <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
+                    <img src="./bilibili-line.png" alt="图">
                     <div>
                         <p>bilibili</p>
                     </div>
                 </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
+                <a class="iconBackBox" href="https://www.zhihu.com/">
+                    <img src="./知乎.png" alt="图">
                     <div>
-                        <p>bilibili</p>
+                        <p>知乎</p>
                     </div>
                 </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
+                <a class="iconBackBox" href="https://weibo.com/">
+                    <img src="./微博 (1).png" alt="图">
                     <div>
-                        <p>bilibili</p>
+                        <p>微博</p>
                     </div>
                 </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
+                <a class="iconBackBox" href="https://github.com/">
+                    <img src="./GitHub.png" alt="图">
                     <div>
-                        <p>bilibili</p>
+                        <p>GitHub</p>
                     </div>
                 </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
-                    <div>
-                        <p>bilibili</p>
-                    </div>
-                </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
-                    <div>
-                        <p>bilibili</p>
-                    </div>
-                </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
-                    <div>
-                        <p>bilibili</p>
-                    </div>
-                </a>
-                <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./google.png" alt="图">
-                    <div>
-                        <p>bilibili</p>
-                    </div>
-                </a>
+<!--                <a class="iconBackBox" href="https://www.bilibili.com">-->
+<!--                    <img src="./google.png" alt="图">-->
+<!--                    <div>-->
+<!--                        <p>bilibili</p>-->
+<!--                    </div>-->
+<!--                </a>-->
+<!--                <a class="iconBackBox" href="https://www.bilibili.com">-->
+<!--                    <img src="./google.png" alt="图">-->
+<!--                    <div>-->
+<!--                        <p>bilibili</p>-->
+<!--                    </div>-->
+<!--                </a>-->
+<!--                <a class="iconBackBox" href="https://www.bilibili.com">-->
+<!--                    <img src="./google.png" alt="图">-->
+<!--                    <div>-->
+<!--                        <p>bilibili</p>-->
+<!--                    </div>-->
+<!--                </a>-->
+<!--                <a class="iconBackBox" href="https://www.bilibili.com">-->
+<!--                    <img src="./google.png" alt="图">-->
+<!--                    <div>-->
+<!--                        <p>bilibili</p>-->
+<!--                    </div>-->
+<!--                </a>-->
             </div>
         </div>
     </div>
