完成首页功能和视频播放器与整体项目整合“

--- a/app/src/main/assets/mainPage.html
+++ b/app/src/main/assets/mainPage.html
@@ -41,26 +41,26 @@
             </div>
             <div class="iconBackBoxAll">
                 <a class="iconBackBox" href="https://www.bilibili.com">
-                    <img src="./bilibili-line.png" alt="图">
-                    <div>
+                    <div class="photo" style="background-image: url(bilibili-line.png);background-size:cover"></div>
+                    <div class="verble">
                         <p>bilibili</p>
                     </div>
                 </a>
                 <a class="iconBackBox" href="https://www.zhihu.com/">
-                    <img src="./知乎.png" alt="图">
-                    <div>
+                    <div  class="photo" style="background-image: url(知乎.png);background-size:cover"></div>
+                    <div class="verble">
                         <p>知乎</p>
                     </div>
                 </a>
                 <a class="iconBackBox" href="https://weibo.com/">
-                    <img src="./微博 (1).png" alt="图">
-                    <div>
+                    <div  class="photo" style="background-image: url(微博.png);background-size:cover"></div>
+                    <div class="verble">
                         <p>微博</p>
                     </div>
                 </a>
                 <a class="iconBackBox" href="https://github.com/">
-                    <img src="./GitHub.png" alt="图">
-                    <div>
+                    <div  class="photo" style="background-image: url(GitHub.png);background-size:cover"></div>
+                    <div class="verble">
                         <p>GitHub</p>
                     </div>
                 </a>
