完成所有功能点的整合和测试

--- a/app/src/main/assets/highRisky.html
+++ b/app/src/main/assets/highRisky.html
@@ -10,12 +10,12 @@
     <script>
         function callBackClient() {
             alert("1");
-            Android.getClient("后退");
+<!--            Android.getClient("后退");-->
         }
 
         function callBackClient2() {
             alert("0");
-            Android.getClient("前进");
+<!--            Android.getClient("前进");-->
         }
     </script>
 </head>
